import org.springframework.util.StringUtils

apply plugin: 'java'
apply plugin: 'org.springframework.boot'

group = 'com.haiercash'
version = StringUtils.trimWhitespace(new File("${projectDir.getAbsolutePath()}${File.separator}..${File.separator}VERSION").text)
sourceCompatibility = 1.8

buildscript {
    ext {
        springBootVersion = '1.5.6.RELEASE'
        springCloudVersion = 'Dalston.SR3'
        isReleaseVersion = project.hasProperty('release')
    }
    repositories {
        mavenLocal()
        maven { url 'http://10.164.194.139:8081/nexus/content/repositories/public/' }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

repositories {
    mavenLocal()
    maven { url 'http://10.164.194.139:8081/nexus/content/repositories/public/' }
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

dependencies {
    compile project(':haiercash-spring')

    //==运行时==
    runtime('org.springframework.boot:spring-boot-devtools')
    //==编译时==
    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
    compileOnly('org.projectlombok:lombok')
    //==测试时==
    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('org.projectlombok:lombok')
}

jar {
    baseName = project.name
    version = project.isReleaseVersion ? project.version : "${project.version}-SNAPSHOT"
}

springBoot {
    classifier = 'exec'
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDirs 'src/main/java'
        }
    }
}

processResources {
    filesMatching('application.properties') {
        expand(project.properties)
    }
}
